--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@lingui/macro": "^4.14.0",
     "@next/bundle-analyzer": "^12.1.0",
     "@svgr/webpack": "^6.5.1",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query-devtools": "^5.62.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -113,6 +114,7 @@
     "@types/react": "latest",
     "@types/react-infinite-scroller": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
     "cypress": "10.9.0",
@@ -129,7 +131,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.5.6",
     "prettier": "^2.8.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.0.4"
   },
   "contributors": [
