--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@mui/lab": "5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
     "@paraswap/sdk": "6.10.0",
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@safe-global/safe-apps-provider": "^0.18.4",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.62.8",
